<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1" android:padding="10dp">
    <LinearLayout android:layout_gravity="fill" android:id="@+id/urlLayout" android:layout_marginTop="5px" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/urlLabel" android:id="@+id/enterUrlLabel"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:layout_gravity="center_horizontal" android:id="@+id/urlText"></EditText>
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_marginTop="10dp" android:baselineAligned="true">
            <ProgressBar android:paddingRight="15dp" android:layout_gravity="right" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/spinner" style="@android:style/Widget.ProgressBar"></ProgressBar>
            <Button android:layout_height="wrap_content" android:text="@string/postButton" android:layout_gravity="right" android:layout_marginTop="10dp" android:id="@+id/shareButton" android:layout_weight="1" android:layout_width="0dp"></Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:id="@+id/credentialsLayout" android:layout_height="match_parent" android:layout_gravity="top" android:weightSum="1" android:layout_marginTop="20dp">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/userIdTitleLabel" android:id="@+id/userIdTitleLabel"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:id="@+id/helpLabel" android:text="@string/helpLabel" android:layout_weight="0.20" android:layout_height="wrap_content"></TextView>
        <TextView android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/userNameLabel" android:text="@string/userIdLabel"></TextView>
        <EditText android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/userNameText"></EditText>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="right" android:layout_marginTop="10dp" android:id="@+id/saveUserIdButton" android:text="@string/saveUserIdButton"></Button>
    </LinearLayout>
</LinearLayout>
